# compiler

./: .cirrus.yml  .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  bors.toml  rust-toolchain
.github/workflows/: fuzz.yaml  release.yaml  test.yaml
cli/: Cargo.toml  main.pseudo
cli/src/: main.rs
code/: README.md  package-lock.json  package.json  pseudo-config.json
code/src/: extension.ts
examples/: alloc.pseudo  factorial.pseudo  fib.pseudo  record.pseudo  string.pseudo  test.c
filetests/: alloc.pseudo  boolean_equal.pseudo  boolean_unequal.pseudo  empty_record.pseudo  factorial.pseudo  false_false.pseudo  fib.pseudo  if_else.pseudo  integers.pseudo  multiple_statements.pseudo  notequal.pseudo  print_bool.pseudo  record.pseudo  record_with_bool.pseudo  record_with_multiple_fields.pseudo  return_bool.pseudo  string.pseudo
logic/: Cargo.toml  Makefile.toml
logic/proptest-regressions/parse/: ident.txt
logic/proptest-regressions/parse/utils/: test.txt
logic/src/: lib.rs
logic/src/codegen/: compile.rs  expr.rs  func.rs  layout.rs  make_module.rs  mod.rs
logic/src/diagnostics/: mod.rs  position.rs  reportable_error.rs  span.rs
logic/src/fuzzcheck/: parse.rs
logic/src/id/: mod.rs  test.rs
logic/src/id/examples/: one
logic/src/id/snapshots/: logic__id__test__scopes.snap
logic/src/parse/: assign.rs  block.rs  expr.rs  for.rs  func.rs  fuzz.rs  ident.rs  if.rs  lit.rs  mod.rs  record.rs  table.rs  test.rs  test_scopes.rs  ui.rs  while.rs
logic/src/parse/examples/: comments  func-inside-while  if  invalid  invalid-expr  invalid-expr2  invalid-for  invalid-for2  invalid-for3  invalid-for5  invalid-for6  invalid-func  invalid-func2  invalid-if  invalid-if-for  invalid-if2  invalid-if3  invalid-while  more-comments  multiple  nested  scopes-with-functions  simple-for-scope  simple-scope  valid-func  while
logic/src/parse/examples/fuzzcheck/: complex-expr  complex-if  diverse-cov  diverse-cov2  floats  for  for2  func-call  high-cov  if  record  simple-constructor
logic/src/parse/snapshots/: logic__parse__ui__invalid_brackets2.snap  logic__parse__ui__invalid_brackets3-2.snap  logic__parse__ui__invalid_brackets3-3.snap  logic__parse__ui__invalid_brackets3.snap  logic__parse__ui__invalid_brackets_1.snap  logic__parse__ui__invalid_operator.snap  logic__parse__ui__missing_endfor.snap  logic__parse__ui__non_alphabetic_ident.snap
logic/src/parse/ui-examples/: missing-next
logic/src/parse/utils/: mod.rs  test.rs
logic/src/ty/: constraints.rs  dbg.rs  error.rs  fuzz.rs  fuzz2.rs  mod.rs  test.rs  track.rs  ui.rs
logic/src/ty/examples/: V  bool  catalan  factorial  failing  failing-for  fib  iterative-factorial  record  simple  very-simple
logic/src/ty/snapshots/: logic__ty__ui__simple.snap
logic/src/visitor/: mod.rs
lsp/: Cargo.toml
lsp/src/: cast.rs  files.rs  main.rs  regressions.rs
runtime/: Cargo.toml  Makefile.toml
runtime/src/: lib.rs
scripts/: ci.sh  ci_lint.sh  ci_test.sh  fuzz_parser.sh  install_nextest.sh  output.sh  setup_ci.sh
tests/codegen/: Cargo.toml
tests/codegen/src/: lib.rs
tests/e2e/: Cargo.toml
tests/e2e/src/: fuzzcheck_finds.rs  lib.rs  main.rs
tests/fuzz_parser/: Cargo.toml
tests/fuzz_parser/in/: assign2  expr  expr2  expr3  for  func  if  multiple
tests/fuzz_parser/src/: main.rs
tests/fuzzer/: Cargo.toml
tests/fuzzer/src/: lib.rs
tests/generator/: Cargo.toml
tests/generator/src/: lib.rs
tests/oracle/: Cargo.toml
tests/oracle/src/: main.rs
tests/should_fail_e2e/: Cargo.toml
tests/should_fail_e2e/src/: lib.rs  (+1 more)
