[package]
name = "logic"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
codespan-reporting = "0.11.1"
cranelift-codegen = "0.86.1"
cranelift-frontend = "0.86.1"
cranelift-module = "0.86.1"
cranelift-object = "0.86.1"
cranelift-native = "0.86.1"
rustc-hash = "1.1.0"
cranelift-jit = "0.86.1"
log = "0.4.17"

[dependencies.fuzzcheck]
git = "https://github.com/loiclec/fuzzcheck-rs"
rev = "2bfa9f0"
optional = true

[dev-dependencies]
insta = "1.18.0"
rustversion = "1.0.9"
serde = { version = "1.0.142", features = ["derive"] }
