[package]
name = "logic"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
codespan-reporting = "0.11.1"
cranelift-codegen = "0.87.1"
cranelift-frontend = "0.87.1"
cranelift-object = "0.87.1"
cranelift-module = "0.87.1"
cranelift-native = "0.87.1"
cranelift-jit = "0.87.1"
rustc-hash = "1.1.0"

[dev-dependencies.fuzzcheck]
git = "https://github.com/loiclec/fuzzcheck-rs"
rev = "2acc737"

[dev-dependencies]
insta = "1.40.0"
rustversion = "1.0.17"
serde = { version = "1.0.210", features = ["derive"] }
