[package]
name = "pseudo-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
lsp-server = "0.6.0"
ropey = "1.3.2"
serde = "1.0.144"
serde_json = "1.0.85"
codespan-lsp = "0.11.1"
codespan-reporting = "0.11.1"
rustc-hash = "1.1.0"

# we match `codespan-lsp`
[dependencies.lsp-types]
version = ">=0.84, <0.90"

[dependencies.logic]
path = "../logic"
