[package]
name = "fuzzer"
version = "0.1.0"
edition = "2021"

[dependencies]
logic = { path = "../../logic" }
generator = { path = "../generator", features = ["fuzzcheck"], optional = true }
fuzzcheck = { git = "https://github.com/loiclec/fuzzcheck-rs", rev = "2bfa9f0", optional = true }

[features]
enable = ["fuzzcheck", "generator"]
