[package]
name = "generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustversion = "1.0.17"
serde = { version = "1.0.210", features = ["derive"] }
fuzzcheck = { version = "0.13.0" }

[dev-dependencies]
